Closed Bug 1878597 Opened 4 months ago Closed 3 months ago

Server keys should not be reused within a session

Categories

(MailNews Core :: General, defect)

Thunderbird 115
defect

Tracking

(thunderbird_esr115 wontfix)

RESOLVED FIXED
124 Branch
Tracking Status
thunderbird_esr115 --- wontfix

People

(Reporter: darktrojan, Assigned: darktrojan)

References

Details

Attachments

(1 file)

If a server is removed then a new server is created, the new server is given the same server key as the one that was removed. This can lead to confusing things happening if some reference to the old server is hanging around, e.g. bug 1878257. In that case the old nsMsgIncomingServer object was still attached to the observer service, and when the observer fired it got confused reading the preferences of a different server with the same key. This could happen in real use, not just tests, but it's probably very rare.

Target Milestone: --- → 124 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/c53ed2b5f518
Prevent reuse of server keys within a session. r=BenC

Status: ASSIGNED → RESOLVED
Closed: 3 months ago
Resolution: --- → FIXED
Regressions: 1879157
Version: unspecified → Thunderbird 115

Not uplifting to 115 per Geoff

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: