Bug 1878597 - Prevent reuse of server keys within a session. r=BenC

Differential Revision: https://phabricator.services.mozilla.com/D200599

--HG--
extra : amend_source : 312a6c428bb7e1e1275ff7ca0c39632b800a433b